Renaming and adding description

--- a/Old_People_From_SaoPaulo_City.ipynb
+++ b/Old_People_From_SaoPaulo_City.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**This is a visual representation of where old people are concentrated in the city of São Paulo.**\n",
+    "\n",
+    "Shades of red represent where the percentage of old people is higher in São Paulo's residential zones.\n",
+    "\n",
+    "Spreadsheet data and map shapefile from 2007, made publicly available by Metrô, state-owned public transportation company from São Paulo city, Brazil."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -18,7 +29,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +54,7 @@
     "# Read in a shapefile\n",
     "shapeFilePath = r'Input/Zonas2007_022008_region.shp'\n",
     "driver = ogr.GetDriverByName('ESRI Shapefile')\n",
-    "dataSource = driver.Open(daShapefile, 0) # 0 is read-only\n",
+    "dataSource = driver.Open(shapeFilePath, 0) # 0 is read-only\n",
     "layer = dataSource.GetLayer()\n",
     "r = shapefile.Reader(shapeFilePath)\n",
     "\n",
@@ -148,6 +159,15 @@
     "i = ImageShow(filename=r'tempImg.png')\n",
     "i"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
