Adding household tax variation of sao paulo city 2014

--- a/Old_People_From_SaoPaulo_City.ipynb
+++ b/Old_People_From_SaoPaulo_City.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -29,7 +29,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,21 +69,21 @@
     "    oldiesPerZoneRatio.append((int(sheet.col(0)[rownum].value), 0 if int(sheet.col(11)[rownum].value) == 0 else int(sheet.col(11)[rownum].value) / int(sheet.col(12)[rownum].value)))\n",
     "\n",
     "# Definition of color per old people ratio\n",
-    "def getColorPerOldieRatio(families):\n",
-    "    if families > 0.25:\n",
+    "def getColorPerOldieRatio(oldiesRatio):\n",
+    "    if oldiesRatio > 0.25:\n",
     "        return 'rgb(255,0,0)'\n",
-    "    elif families > 0.20:\n",
+    "    elif oldiesRatio > 0.20:\n",
     "        return 'rgb(255,150,150)'\n",
-    "    elif families > 0.15:\n",
+    "    elif oldiesRatio > 0.15:\n",
     "        return 'rgb(160,255,160)'\n",
-    "    elif families > 0.10:\n",
+    "    elif oldiesRatio > 0.10:\n",
     "        return 'rgb(100,255,100)'\n",
-    "    elif families > 0.05:\n",
+    "    elif oldiesRatio > 0.05:\n",
     "        return 'rgb(50,255,50)'\n",
     "    else:\n",
     "        return 'rgb(20,255,20)'   \n",
     "\n",
-    "# Filtering per city\n",
+    "# Get Color method (calling getColorPerOldieRatio for São Paulo and returning a gray color otherwise)\n",
     "def getColor(feature):\n",
     "    if feature.GetField(\"MUNICIPIO\") == 36: #sa=32 scs=34  sbc=33  sp=36\n",
     "        ratio = list(filter(lambda a: a[0] == int(feature.GetField(\"ZONA\")), oldiesPerZoneRatio))[0][1]\n",
@@ -120,6 +120,7 @@
     "    medy = (miny + maxy) /2\n",
     "        \n",
     "    return (((medx + x) /2)-30,(medy +y)/2)\n",
+    "\n",
     "\n",
     "# Plotting the map\n",
     "\n",
