--- a/Household_Tax_Variation_SaoPaulo_City_2014.ipynb
+++ b/Household_Tax_Variation_SaoPaulo_City_2014.ipynb
@@ -6,12 +6,14 @@
    "source": [
     "This is a visual representation of the household tax (IPTU) variation in São Paulo city for the year 2014.\n",
     "\n",
-    "The shapefile as well as the data u"
+    "The shapefile as well as the data spreadsheet were made publicly available by São Paulo town hall.\n",
+    "\n",
+    "Shades of red indicate districts that have suffered a household tax increase in 2014, whereas green shades indicate decreases."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +25,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +51,7 @@
     "# Read shapefile\n",
     "shapefilePath = r'input/DISTRITO.shp'\n",
     "driver = ogr.GetDriverByName('ESRI Shapefile')\n",
-    "dataSource = driver.Open(daShapefile, 0) # 0 is read-only\n",
+    "dataSource = driver.Open(shapefilePath, 0) # 0 is read-only\n",
     "layer = dataSource.GetLayer()\n",
     "r = shapefile.Reader(shapefilePath)\n",
     "\n",
@@ -125,13 +127,22 @@
     "    f = ImageFont.load_default()\n",
     "    shapecount +=1\n",
     "\n",
-    "img.save(r'tempImg.png')\n",
+    "img.save(r'householdTax.png')\n",
     "\n",
     "\n",
-    "i = ImageShow(filename=r'tempImg.png')\n",
+    "i = ImageShow(filename=r'householdTax.png')\n",
     "\n",
     "i"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
