Changing temp file name

--- a/Plane Flights - Brazil.ipynb
+++ b/Plane Flights - Brazil.ipynb
@@ -297,9 +297,9 @@
     "    \n",
     "ax.set_xlim(-75,-25)\n",
     "ax.set_ylim(-35,5)\n",
-    "fig.savefig('test.png')\n",
+    "fig.savefig('brazilPlanes.png')\n",
     "plt.close('all')\n",
-    "i = ImageShow(filename=r'test.png')\n",
+    "i = ImageShow(filename=r'brazilPlanes.png')\n",
     "i"
    ]
   },
